tests/trybuild/result/comma_alone.stderr
error: no rules expected the token `,`
 --> tests/trybuild/result/comma_alone.rs:4:17
  |
4 |     let result!(,) = view::Null;
  |                 ^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
