tests/trybuild/result/comma_alone.rs
use brood::query::{result, view};

fn main() {
    let result!(,) = view::Null;
}
